[package]
name = "libunicorn-sys"
version = "0.9.0"
edition = "2018"
authors = ["Sébastien Duquette <ekse.0x@gmail.com>"]
description = "Rust bindings for the unicorn emulator"
repository = "https://github.com/ekse/unicorn-rs"
documentation = "http://ekse.github.io/unicorn/"
license = "GPL-2.0"
build = "build.rs"
links = "unicorn"
exclude = [
    "unicorn/tests/*",
    "unicorn/bindings/*",
    "unicorn/docs/*",
    "unicorn/samples/*"]

[lib]
name = "libunicorn_sys"

[dependencies]
bitflags = "1.0"
libc = { version = "0.2" }

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2"

[target.'cfg(not(windows))'.build-dependencies]
build-helper = "0.1"
